--- a/thinkpink_app/client/package.json
+++ b/thinkpink_app/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "js-cookie": "^2.2.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.4",
     "react": "^16.12.0",
@@ -13,7 +14,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scrollmagic": "^2.1.1",
-    "react-video-scroll": "^1.0.1"
+    "react-video-scroll": "^1.0.1",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
