--- a/thinkpink_app/client/package.json
+++ b/thinkpink_app/client/package.json
@@ -11,6 +11,7 @@
     "mobx-react": "^6.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-multistep": "^3.6.16",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scrollmagic": "^2.1.1",
