--- a/thinkpink_app/client/package.json
+++ b/thinkpink_app/client/package.json
@@ -18,6 +18,7 @@
     "react-video-scroll": "^1.0.1",
     "uuid": "^3.4.0"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
