--- a/thinkpink_app/client/package.json
+++ b/thinkpink_app/client/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scrollmagic": "^2.1.1",
+    "react-step-progress-bar": "^1.0.3",
     "react-video-scroll": "^1.0.1",
     "uuid": "^3.4.0"
   },
